# Mimic

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Mimic/: Application.cpp  Application.h  CMakeLists.txt  Core.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  Mimic.cpp  Mimic.h  Window.h  mzpch.h
Mimic/Core/: Assert.h  Base.h
Mimic/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Mimic/Platform/Windows/: Asserts.h  WindowsWindow.cpp  WindowsWindow.h
Mimic/include/: Application.h  Core.h  EntryPoint.h  Log.h  Mimic.h
Mimic/src/: Application.cpp
Sandbox/: CMakeLists.txt
Sandbox/src/: SandboxApp.cpp
